# jadeos_installer

./: AGENT.md  Cargo.toml  Dioxus.toml  LICENSE  README.md  SKILL.md  flake.nix  package-lock.json  result  tailwind.css
agents/: openai.yaml
assets/: tailwind.css
installer/: Cargo.toml
installer/assets/: tailwind.css
installer/src/: app.rs  lib.rs  main.rs
installer/src/api/: command.rs  disk.rs  execute.rs  mod.rs
installer/src/api/install/: execute.rs  layout.rs  mod.rs  nix_templates.rs  plan.rs  types.rs
installer/src/api/install/templates/: gui-user.nix  hardware-configuration.nix  host-configuration.nix  host-flake-parts.nix  install-args.nix
installer/src/gui/: controller.rs  mod.rs  presentation.rs  routes.rs  state.rs  validation.rs
installer/src/gui/components/: mod.rs
installer/src/gui/components/base/: card.rs  container.rs  flexbox.rs  grid.rs  mod.rs  progress_bar.rs  theme.rs  typography.rs
installer/src/gui/components/ui/: button.rs  mod.rs  modal_dialog.rs  status_badge.rs  text_input.rs  toggle_pill.rs
installer/src/gui/pages/: disk.rs  install.rs  summary.rs  user.rs  welcome.rs
installer/src/gui/views/: app_footer.rs  app_header.rs  disk_card.rs  error_banner.rs  info_tile.rs  mod.rs  notice_panel.rs  page_intro.rs  page_section.rs  progress_header.rs  route_shell.rs  validation_list.rs
installer/src/web_api/: disk.rs  install.rs  mod.rs
installer/tests/: install_plan_test.rs  routes_test.rs
instller/: installer.toml  package.json
liveusb/: README.md  flake.nix  installer-package.nix  iso.nix
src/: app.rs  lib.rs  (+1 more)
(+67 files in other folders)
