[package]
name = "jade-installer"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7", default-features = false, features = ["minimal", "router", "document", "asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Location", "Window"] }

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
web = ["dioxus/web"]
